--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -122,6 +122,10 @@
     pointer-events: none;
     transition: opacity 0.3s ease;
     cursor: pointer;
+    outline: none;
+    &:focus{
+        outline: none;
+    }
 }
 
 .modalShow{
