removed watermark, it seems to have an issue with the browser

--- a/styles/_mainSection.scss
+++ b/styles/_mainSection.scss
@@ -128,7 +128,7 @@
         }
         svg{
             display: none;
-            fill: var(--textHeadingColor);
+            fill: var(--primaryColor);
             transition: fill $transitionDuration ease;
         }
     }
