--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -268,7 +268,7 @@
         top: 60%;
     }
     #mainSection{
-        
+        padding-top: 15rem;
         .aboutMeText{
             max-width: 25rem;
         }
@@ -294,6 +294,10 @@
     }
     .navbarContent{
         padding: 1rem 0;
+    }
+
+    #mainSection{
+        padding-top: 17rem;
     }
 }
 
