--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -214,7 +214,9 @@ body{
     left: 0;
     z-index: -1;
     pointer-events: none;
-    max-width: 100vw;
+    width: 100%;
+    // overflow: hidden;
+
 
     .text{
         display: flex;
